--- a/insp_advance_redux/package.json
+++ b/insp_advance_redux/package.json
@@ -24,6 +24,7 @@
   ],
   "devDependencies": {
     "react-redux": "^5.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5"
   }
 }
